# spamham

./: README.md  main.ipynb  pyproject.toml
core/: classifier.py  embeder.py  loader.py  utils.py
